--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,5 +1,18 @@
 @import "tailwindcss";
 
+::before,
+::after {
+  --tw-border-spacing-x: 0;
+  --tw-border-spacing-y: 0;
+  --tw-translate-x: 0;
+  --tw-translate-y: 0;
+  --tw-rotate: 0;
+  --tw-skew-x: 0;
+  --tw-skew-y: 0;
+  --tw-scale-x: 1;
+  --tw-scale-y: 1;
+}
+
 /* @font-face {
   font-family: vazir;
   src: url('../font/vazir-font-v18.0.0/Farsi-Digits/Vazir-Light-FD.eot');
@@ -24,4 +37,167 @@ body {
   line-height: 1.5rem;
   font-weight: 400;
   color: rgb(145 142 160);
+}
+
+.hero-circle-gradient:before {
+  content: '';
+  position: absolute;
+  inset: 0;
+  border-radius: inherit;
+  padding: 1px;
+  -webkit-mask: -webkit-gradient(linear, left top, left bottom, color-stop(0, #fff)) content-box, -webkit-gradient(linear, left top, left bottom, color-stop(0, #fff));
+  -webkit-mask: linear-gradient(#fff 0 0) content-box, linear-gradient(#fff 0 0);
+  -webkit-mask-composite: xor;
+  mask-composite: exclude;
+  z-index: -1;
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(255, 255, 255, 0)), to(rgba(255, 255, 255, 0.08)));
+  background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.08) 100%);
+}
+
+.hero-subtitle-gradient {
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(255, 255, 255, 0.05)), to(rgba(255, 255, 255, 0)));
+  background: linear-gradient(180deg, rgba(255, 255, 255, 0.05) 0%, rgba(255, 255, 255, 0) 100%);
+  -webkit-transition: 0.45s cubic-bezier(0.6, 0.6, 0, 1) -webkit-box-shadow;
+  transition: 0.45s cubic-bezier(0.6, 0.6, 0, 1) -webkit-box-shadow;
+  transition: 0.45s cubic-bezier(0.6, 0.6, 0, 1) box-shadow;
+  transition: 0.45s cubic-bezier(0.6, 0.6, 0, 1) box-shadow, 0.45s cubic-bezier(0.6, 0.6, 0, 1) -webkit-box-shadow;
+}
+
+.hero-subtitle-hover:hover {
+  -webkit-box-shadow: inset 0 -7px 11px #a48fff3d;
+  box-shadow: inset 0 -7px 11px #a48fff3d;
+}
+
+.hero-subtitle-gradient:before {
+  content: '';
+  position: absolute;
+  inset: 0;
+  border-radius: inherit;
+  padding: 1px;
+  -webkit-mask: -webkit-gradient(linear, left top, left bottom, color-stop(0, #fff)) content-box, -webkit-gradient(linear, left top, left bottom, color-stop(0, #fff));
+  -webkit-mask: linear-gradient(#fff 0 0) content-box, linear-gradient(#fff 0 0);
+  -webkit-mask-composite: xor;
+  mask-composite: exclude;
+  z-index: -1;
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(255, 255, 255, 0.11)), to(rgba(255, 255, 255, 0)));
+  background: linear-gradient(180deg, rgba(255, 255, 255, 0.11) 0%, rgba(255, 255, 255, 0) 100%);
+}
+
+.hero-subtitle-text {
+  background: -webkit-linear-gradient(90deg, #e59cff 0.01%, #ba9cff 50.01%, #9cb2ff 100%), -webkit-linear-gradient(0deg, rgba(255, 255, 255, 0.4), rgba(255, 255, 255, 0.4));
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.hero-button-gradient {
+  -webkit-box-shadow: 0px -3px 10px 0px #00000040 inset;
+  box-shadow: 0px -3px 10px 0px #00000040 inset;
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(-11.11%, #a073ee), to(#6e25ed));
+  background: linear-gradient(180deg, #a073ee -11.11%, #6e25ed 100%);
+}
+
+.nav-gradient {
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(10.51%, rgba(255, 255, 255, 0.09)), to(rgba(255, 255, 255, 0)));
+  background-image: linear-gradient(180deg, rgba(255, 255, 255, 0.09) 10.51%, rgba(255, 255, 255, 0) 100%);
+  border: 1px solid rgba(255, 255, 255, 0.09);
+  border-radius: 50px;
+}
+
+.nav-gradient::before {
+  content: '';
+  background-image: -webkit-gradient(linear, left top, right top, color-stop(2.56%, rgba(255, 255, 255, 0)), color-stop(51.48%, rgba(255, 255, 255, 0.4)), color-stop(97.44%, rgba(255, 255, 255, 0)));
+  background-image: linear-gradient(90deg, rgba(255, 255, 255, 0) 2.56%, rgba(255, 255, 255, 0.4) 51.48%, rgba(255, 255, 255, 0) 97.44%);
+  height: 1px;
+  position: absolute;
+  left: 50%;
+  top: 0px;
+  width: 50%;
+  --tw-translate-x: -50%;
+  -webkit-transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.navbar-item:hover {
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(10.51%, rgba(255, 255, 255, 0.09)), to(rgba(255, 255, 255, 0)));
+  background-image: linear-gradient(180deg, rgba(255, 255, 255, 0.09) 10.51%, rgba(255, 255, 255, 0) 100%);
+  border: 1px solid rgba(255, 255, 255, 0.09);
+}
+
+.navbar-item:hover::before {
+  content: '';
+  background-image: -webkit-gradient(linear, left top, right top, color-stop(2.56%, rgba(255, 255, 255, 0)), color-stop(51.48%, rgba(255, 255, 255, 0.4)), color-stop(97.44%, rgba(255, 255, 255, 0)));
+  background-image: linear-gradient(90deg, rgba(255, 255, 255, 0) 2.56%, rgba(255, 255, 255, 0.4) 51.48%, rgba(255, 255, 255, 0) 97.44%);
+  height: 1px;
+  position: absolute;
+  left: 50%;
+  top: 0px;
+  width: 50%;
+  --tw-translate-x: -50%;
+  -webkit-transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+
+}
+
+.button-border-gradient {
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(255, 255, 255, 0.1)), to(rgba(255, 255, 255, 0)));
+  background: linear-gradient(180deg, rgba(255, 255, 255, 0.1) 0%, rgba(255, 255, 255, 0) 100%);
+}
+
+.shadow-button {
+  --tw-shadow: inset 0px -6px 15px rgba(156, 178, 255, 0.25), inset 0px 6px 15px rgba(229, 156, 255, 0.25);
+  --tw-shadow-colored: inset 0px -6px 15px var(--tw-shadow-color), inset 0px 6px 15px var(--tw-shadow-color);
+  -webkit-box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.button-border-gradient:before {
+  content: '';
+  position: absolute;
+  inset: 0;
+  border-radius: inherit;
+  padding: 1px;
+  -webkit-mask: -webkit-gradient(linear, left top, left bottom, color-stop(0, #fff)) content-box, -webkit-gradient(linear, left top, left bottom, color-stop(0, #fff));
+  -webkit-mask: linear-gradient(#fff 0 0) content-box, linear-gradient(#fff 0 0);
+  -webkit-mask-composite: xor;
+  mask-composite: exclude;
+  z-index: -1;
+  background: -webkit-gradient(linear, left top, right top, color-stop(0.01%, rgba(229, 156, 255, 0.45)), color-stop(50.01%, rgba(186, 156, 255, 0.45)), to(rgba(156, 178, 255, 0.45)));
+  background: linear-gradient(90deg, rgba(229, 156, 255, 0.45) 0.01%, rgba(186, 156, 255, 0.45) 50.01%, rgba(156, 178, 255, 0.45) 100%);
+}
+
+.button-border-gradient:hover {
+  -webkit-box-shadow: inset 0px -6px 17px rgba(156, 178, 255, 0.3), inset 0px 6px 17px rgba(229, 156, 255, 0.3);
+  box-shadow: inset 0px -6px 17px rgba(156, 177, 255, 0.4), inset 0px 6px 17px rgba(229, 156, 255, 0.4);
+}
+
+.features-row-border {
+  background: -webkit-gradient(linear, right top, left top, from(rgba(255, 255, 255, 0)), color-stop(49.48%, rgba(255, 255, 255, 0.12)), to(rgba(255, 255, 255, 0)));
+  background: linear-gradient(270deg, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.12) 49.48%, rgba(255, 255, 255, 0) 100%);
+}
+
+.features-bg {
+    background: -webkit-gradient(linear, left top, left bottom, from(rgba(255, 255, 255, 0)), to(rgba(255, 255, 255, 0.05)));
+    background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.05) 100%);
+    -webkit-transition: 0.45s cubic-bezier(0.6, 0.6, 0, 1) opacity;
+    transition: 0.45s cubic-bezier(0.6, 0.6, 0, 1) opacity;
+}
+
+.icon-border {
+    background: -webkit-gradient(linear, left top, left bottom, from(rgba(255, 255, 255, 0.0288)), color-stop(50%, rgba(255, 255, 255, 0.06)), to(rgba(255, 255, 255, 0)));
+    background: linear-gradient(180deg, rgba(255, 255, 255, 0.0288) 0%, rgba(255, 255, 255, 0.06) 50%, rgba(255, 255, 255, 0) 100%);
+}
+
+.icon-border:before {
+    content: '';
+    position: absolute;
+    inset: 0;
+    border-radius: inherit;
+    padding: 1px;
+    -webkit-mask: -webkit-gradient(linear, left top, left bottom, color-stop(0, #fff)) content-box, -webkit-gradient(linear, left top, left bottom, color-stop(0, #fff));
+    -webkit-mask: linear-gradient(#fff 0 0) content-box, linear-gradient(#fff 0 0);
+    -webkit-mask-composite: xor;
+    mask-composite: exclude;
+    z-index: -1;
+    background: -webkit-gradient(linear, left top, left bottom, from(rgba(255, 255, 255, 0.06)), color-stop(50.52%, rgba(255, 255, 255, 0.15)), to(rgba(255, 255, 255, 0)));
+    background: linear-gradient(180deg, rgba(255, 255, 255, 0.06) 0%, rgba(255, 255, 255, 0.15) 50.52%, rgba(255, 255, 255, 0) 100%);
 }
