--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -399,3 +399,13 @@ body {
     background: -webkit-gradient(linear, left bottom, left top, from(rgba(255, 255, 255, 0.18)), to(rgba(255, 255, 255, 0)));
     background: linear-gradient(0deg, rgba(255, 255, 255, 0.18) 0%, rgba(255, 255, 255, 0) 100%);
 }
+
+.footer-bg-gradient {
+    background: -webkit-gradient(linear, left bottom, left top, from(rgba(255, 255, 255, 0.1)), to(rgba(255, 255, 255, 0)));
+    background: linear-gradient(0deg, rgba(255, 255, 255, 0.1) 0%, rgba(255, 255, 255, 0) 100%);
+}
+
+.footer-divider-gradient {
+    background: -webkit-gradient(linear, right top, left top, from(rgba(255, 255, 255, 0)), color-stop(49.48%, rgba(255, 255, 255, 0.12)), to(rgba(255, 255, 255, 0)));
+    background: linear-gradient(270deg, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.12) 49.48%, rgba(255, 255, 255, 0) 100%);
+}
